# hold-my-beer

./: index.html  localhost+2-key.pem  localhost+2.pem  package-lock.json  package.json  vite.config.ts
crates/fluid_simulation_wasm/: Cargo.toml
crates/fluid_simulation_wasm/src/: lib.rs
dev-dist/: sw.js
public/: site.webmanifest  sw.js
src/: fluid.worker.js
src/pkg_fluid_simulation/: fluid_simulation_wasm.d.ts  fluid_simulation_wasm.js  fluid_simulation_wasm_bg.wasm  fluid_simulation_wasm_bg.wasm.d.ts  package.json
